# workers-link-shortener

./: Cargo.toml  Justfile  README.md  wrangler.toml
src/: lib.rs
