[package]
name = "workers-link-shortener"
version = "0.1.0"
publish = false
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
html-escape = "0.2.13"
worker = "0.0.19"
worker-kv = "0.8.0"
serde_json = "1.0.132"


[profile.release]
lto = true
strip = true
codegen-units = 1
